fix(#S11P31D102-253): GroupServiceImpl redis 반영 안된 유저 빈 배열 반환 오류 수정